opensesame (2.8.0~pre14-ubuntu1) saucy; urgency=low

  * New functionality and improvements
    - Add runner functionality
    - Improved exception handling
    - Migrate to QProgEdit editor component
    - Updated offline help pages
    - Improve support for non-Latin alphabets (#211)
    - Add correct-response option to touch_response plug-in (#214)
    - Add style argument to canvas.fixdot()
  * Bugs fixed
    - Line wrapping causes double spaces (#203)
    - Keywords to `decode()` break compatibility with Python < 2.7 (#201)
    - Respect `focus=no` in `form_base` (#208)
    - Fix ugly exception on Escape press in joystick plug-in (#162)
    - Correctly parse non-Unix line separators in HTML parser
    - Do not give ugly warning on close (#124)
  * Debian packaging
    - Remove large template files

 -- Sebastiaan Mathot <s.mathot@cogsci.nl>  Fri, 13 Sep 2013 16:59:10 +0200

opensesame (0.27.4-ubuntu2) raring; urgency=low

  * Various bug-fixes
  * Add Chinese translation (zh_CN)
  * Make HTML parsing optional in sketchpad items
  * Add `orientation` keyword to rating_scale form widget

 -- Sebastiaan Mathot <s.mathot@cogsci.nl>  Wed, 21 Aug 2013 13:08:16 +0200

opensesame (0.27.3-ubuntu1) raring; urgency=low

  * Various bug-fixes
  * Add French translation

 -- Sebastiaan Mathot <s.mathot@cogsci.nl>  Sun, 09 Jun 2013 17:25:58 +0200

opensesame (0.27.2-ubuntu1) raring; urgency=low

  * Add support for Android
  * Add new-style plug-in API
  * Add support for Markdown help files
  * Persistent globals and locals stack in line_script items
  * Add set_pos() and get_pressed() to mouse
  * Miscellaneous bug fixes
  * Add transparent variable management
  * Fix various Unicode errors
  * Update test suite to use Expyriment test suite

 -- Sebastiaan Mathot <s.mathot@cogsci.nl>  Wed, 10 Apr 2013 14:56:35 +0200

opensesame (0.27.1-ubuntu1) precise; urgency=low

  * Fix numeric values in form checkboxex
  * Do not show start-up tab when opening a file directly